# hello-python

./: .gitignore  README.md  hello_python.py  pyproject.toml  utils.py
core_concepts/beginner/: hello.py  hello_challenge.py
core_concepts/start_here/: README.md  hello_challenge.py
